--- a/bob.css
+++ b/bob.css
@@ -1,7 +1,7 @@
 
 :root {
     --amarillo: #E9F802;
-    --amarilloPalido: #F7FF7B;
+    --amarilloPalido: #ff3737;
     --negro: #000;
     --negroOpa: rgba(0, 0, 0, 0.25);
     --blanco: #fff;
