--- a/bob.css
+++ b/bob.css
@@ -1,7 +1,7 @@
 
 :root {
-    --amarillo: #E9F802;
-    --amarilloPalido: #ff3737;
+    --amarillo: #ff0000;
+    --amarilloPalido: #00eaff;
     --negro: #000;
     --negroOpa: rgba(0, 0, 0, 0.25);
     --blanco: #fff;
